2006-05-18  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* site/install/devel.ihtml: use Gx monikers for Mac.

2006-05-15  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* site/about/index.html: fix broken link.

	* site/images/linux-audio-developers.jpeg (Module): new file.

2006-05-12  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* site/news.ihtml (Preferably): announce 2.9.4 and 2.8.2

2006-05-07  John Mandereau  <john.mandereau@free.fr>

	* fr/documentation.html, fr/switch/index.html, fr/index.html,
	fr/about/pubs.html: update translation.

2006-05-01  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* site/devel/participating/standards.html: document PEP 8 usage.

	* site/documentation.html: add 2.9 doc links.

	* nl/index.html: add 2.9 links.

	* scripts/big-page.py: 4 space indent everywhere.

2006-04-23  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/news.ihtml (href): announce slides.
	(href): oops. typo.

2006-04-22  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/about/pubs.html (href): add URL
	(href): fix file size

	* site/images/FISL7-slides.pdf (Module): add slides of FISL7

2006-04-12  Jan Nieuwenhuizen  <janneke@gnu.org>

	* GNUmakefile (FILES): Add localized, ihtml, readmes.
	(SCRIPTS): Bugfix.

	* TRANSLATION (Priorities): Add sponsor to category 1.

	* GNUmakefile (VERSION): Use cached Revision from site/index.html
	rather than `1.0'.

	* scripts/check-translation.py (do_file): Bugfix.

	* TRANSLATION (LANG): Update.

2006-04-11  Graham Percival  <gpermus@gmail.com>

	* site/devel/participating/documentation-adding.html:
	clarified suggestions for documentation submissions.

2006-04-06  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* site/index.html: strip word from intro.

	* site/switch/index.html: new blurb.

2006-03-31  Gauvain Pocentek  <gauvainpocentek@gmail.com>

	* fr/index.html: add version 2.9 links

	* fr/install/index.html: add 2.9 section

2006-03-31  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* site/news.ihtml (href): announce 2.8.1 for darwin-x86
