@@ -27,6 +27,16 @@ on one day.
 
 !-->
 
+<dt><b>LilyPond 2.9.5 available</b> - <em>May 17, 2006</em>
+<dd>
+This release supports object rotation, hairpins with circled tips,
+hairpins that run to barlines before notes and improvements in the
+MusicXML converter.
+(<a
+href="@DOC@v2.9/Documentation/topdocs/NEWS.html">Changes</a>, <a
+href="install/#2.9">Download</a>)
+</dd>
+
 <dt><b>LilyPond 2.9.4 available</b> - <em>May 12, 2006</em>
 <dd>
 
@@ -43,23 +53,6 @@ href="install/#2.9">Download</a>)
 <dd>
 This release has fixes for minor bugs and compilation issues.
  (<a href="install/#2.8">Download</a>) </dd>
-</dd>
-
-<dt><b>LilyPond 2.9.3 is out!</b> - <em>May 7, 2006</em></dt> <dd>
-This new release has lots of updates of the manual, courtesy Graham
-and the contributors of the mailing. It handles formatting for ties in
-arpegiated chords better (feature sponsored by
-Steve Doonan), it has al niente hairpins, courtesy of Erlend Aasland,
-and some cleanups of the PostScript output, courtesy David Feuer. (<a
-href="@DOC@v2.9/Documentation/topdocs/NEWS.html">Changes</a>, <a
-href="install/#2.9">Download</a>) </dd>
-
-<dt><b>FISL7.0 slides available</b> - <em>April 22, 2006</em>
-
-<dd> The slides for Han-Wen's talk at <a
-href="http://fisl.softwarelivre.org">FISL 7</a> are now online. (<a
-href="@IMAGES@FISL7-slides.pdf">download</a>)
-
 </dd>
 
 </dl>
