@@ -23,6 +23,24 @@
 
 
 
+<dt><b>LilyPond 2.9.3 is out!</b> - <em>May 7, 2006</em></dt> <dd>
+This new release has lots of updates of the manual, courtesy Graham
+and the contributors of the mailing. It handles formatting for ties in
+arpegiated chords better (feature sponsored by
+Steve Doonan), it has al niente hairpins, courtesy of Erlend Aasland,
+and some cleanups of the PostScript output, courtesy David Feuer. (<a
+href="@DOC@v2.9/Documentation/topdocs/NEWS.html">Changes</a>, <a
+href="install/#2.9">Download</a>) </dd>
+
+<dt><b>FISL7.0 slides available</b> - <em>April 22, 2006</em>
+
+<dd> The slides for Han-Wen's talk at <a
+href="http://fisl.softwarelivre.org">FISL 7</a> are now online. (<a
+href="@IMAGES@FISL7-slides.pdf">download</a>)
+
+</dd>
+
+
 <dt><b>LilyPond 2.8.1 is out!</b> - <em>April 3, 2006</em></dt> <dd>
 Important bugfixes include CJK font handling and a Darwin/x86 port.
 (<a
